--- a/src/style/foundation/_reset.scss
+++ b/src/style/foundation/_reset.scss
@@ -36,12 +36,13 @@ body {
 }
 
 a {
+  color: inherit;
   text-decoration: none;
 
-  &:visited,
   &:focus,
   &:active,
   &:hover {
+    color: inherit;
     text-decoration: none;
   }
 }
