--- a/src/style/layout/_sidebar.scss
+++ b/src/style/layout/_sidebar.scss
@@ -47,9 +47,13 @@
       }
 
       &:hover {
-        background-color: #fff;
-        color: #222;
+        color: #fff;
       }
+    }
+
+    .active {
+      background-color: #fff;
+      color: #222;
     }
   }
 }
