--- a/src/style/foundation/_reset.scss
+++ b/src/style/foundation/_reset.scss
@@ -32,7 +32,9 @@ html {
 }
 
 body {
+  background-color: #f7f7f7 !important;
   overflow-x: hidden;
+  font-family: "system-ui", suns-serif;
 }
 
 a {
