--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -6,4 +6,6 @@
 @import 'layout/sidebar';
 @import 'layout/main';
 
+@import 'object/component/contentBox';
+@import 'object/component/list';
 @import 'object/component/form';
